Remove hover effect from links on mobile view to avoid sticky effect after clicking

--- a/src/angular/app/common/player-summary/player-summary.component.less
+++ b/src/angular/app/common/player-summary/player-summary.component.less
@@ -39,9 +39,11 @@
     }
   }
 
-  &__action:hover {
-    i {
-      color: #ed7d3a;
+  @media only screen and (min-width: @medium-screen-up) {
+    &__action:hover {
+      i {
+        color: #ed7d3a;
+      }
     }
   }
 }
