--- a/src/angular/app/leagues/admin-summary/admin-summary.component.less
+++ b/src/angular/app/leagues/admin-summary/admin-summary.component.less
@@ -24,9 +24,11 @@
     }
   }
 
-  &__action:hover {
-    i {
-      color: #ed7d3a;
+  @media only screen and (min-width: @medium-screen-up) {
+    &__action:hover {
+      i {
+        color: #ed7d3a;
+      }
     }
   }
 }
