--- a/src/angular/app/mixins.less
+++ b/src/angular/app/mixins.less
@@ -1,3 +1,6 @@
+//from Materialize query ranges
+@medium-screen-up: 993px;
+
 .summary-list-mixin() {
   display: flex;
   flex-direction: row;
